--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "5d69d888",
+   "id": "07b857ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "4985ee9a",
+   "id": "47c16995",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "be3edd75",
+   "id": "af32dafb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "61471753",
+   "id": "3aa5a651",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "1b1cdc9c",
+   "id": "727c945c",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "3d0aba05",
+   "id": "dabf8dc0",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "ad26436d",
+   "id": "a48dbefa",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "5a5562d7",
+   "id": "16ae7d35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "44d62a86",
+   "id": "71e3f023",
    "metadata": {
     "scrolled": true
    },
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "956f9e09",
+   "id": "20b3e6cf",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "21510b6b",
+   "id": "78d18a77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "dfade2ca",
+   "id": "71d648b5",
    "metadata": {
     "scrolled": true
    },
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "01952880",
+   "id": "4616b555",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "77092931",
+   "id": "855cfc36",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "771fb934",
+   "id": "a975af79",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "b68efab2",
+   "id": "69c5b376",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "cb98b3e4",
+   "id": "08f291eb",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "13d8e0c8",
+   "id": "dd6dde9e",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "6c5124a3",
+   "id": "320df9e7",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "5119c1c0",
+   "id": "559c9741",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "9d8db918",
+   "id": "84574947",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "8724028f",
+   "id": "9979ae79",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "747f439e",
+   "id": "19d24d7c",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "f8a2b2c9",
+   "id": "8374ac43",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c6a37853",
+   "id": "ad317635",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "bdb209c5",
+   "id": "5e60d3fc",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "04f84398",
+   "id": "ba6d6248",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9efb9e4",
+   "id": "2a1eabc8",
    "metadata": {},
    "source": [
     "Basic Operations"
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "4e60e4f1",
+   "id": "b0cc6245",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "7a3b75c8",
+   "id": "41e92e00",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "5251ec5d",
+   "id": "b4ab7394",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "058b9d22",
+   "id": "a0995aae",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dc577c6",
+   "id": "ed44ffc0",
    "metadata": {},
    "source": [
     "Comparison Operators"
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "2fee1db2",
+   "id": "9e603108",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81b84b1",
+   "id": "3b20ba12",
    "metadata": {},
    "source": [
     "Logical Operations"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "bda7f002",
+   "id": "05e64f0e",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "b5c7b79a",
+   "id": "a8d8b46d",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4463547",
+   "id": "d6ef0089",
    "metadata": {},
    "source": [
     "Accessing Array elements (Indexing)"
@@ -727,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "5699f3d8",
+   "id": "9f40a7f3",
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "f8724b4a",
+   "id": "965e7183",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1172281",
+   "id": "941f9eda",
    "metadata": {},
    "source": [
     "Indexing with Boolean Arrays"
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "dc9a02cf",
+   "id": "1e070b2a",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "c975f4d2",
+   "id": "56dde201",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e50b05a",
+   "id": "7087dd72",
    "metadata": {},
    "source": [
     "Copy and Views"
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "22331c63",
+   "id": "f29a000b",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "aaa5bbd2",
+   "id": "9c541b79",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "b174fae6",
+   "id": "a5e605b8",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "2c136d23",
+   "id": "9c3e0773",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "907e5d77",
+   "id": "637488d6",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "99f82b1a",
+   "id": "87f302b7",
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "d9782bb4",
+   "id": "f6a62715",
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "2873eadf",
+   "id": "444df6ea",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "df95bffc",
+   "id": "6450525f",
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "969f775e",
+   "id": "aa9f30a5",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "5e8776c3",
+   "id": "408d0aed",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b625f82",
+   "id": "9b14e73b",
    "metadata": {},
    "source": [
     "# Mathemathical Functions"
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c276c3d",
+   "id": "75fab881",
    "metadata": {},
    "source": [
     "NumPy provides useful mathematical functions, which are called Universal Functions.\\\n",
@@ -1108,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "9a0d1437",
+   "id": "87eb01e7",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "e8a7bd99",
+   "id": "ea806c73",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "a73383f6",
+   "id": "a4a1c147",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "972c9d1f",
+   "id": "6264f3dc",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "cb63ca1f",
+   "id": "c1cf701c",
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "03c8d30c",
+   "id": "3e5a1b35",
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1da60e49",
+   "id": "560b98c8",
    "metadata": {},
    "source": [
     "Shape Manipulation.\\\n",
@@ -1245,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "91bb15a6",
+   "id": "0ea1aa0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "0e63d205",
+   "id": "12c50780",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "6d3bb28f",
+   "id": "1bbeeda6",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "b3e0c7b6",
+   "id": "5c321f30",
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "4de4faae",
+   "id": "2615b68e",
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "05d814a3",
+   "id": "869c196b",
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "deed4a77",
+   "id": "9f2cd5b0",
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86df07fb",
+   "id": "d750e8b3",
    "metadata": {},
    "source": [
     "# Broadcasting.\n",
@@ -1410,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "3287d356",
+   "id": "531307f5",
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "1c493bcf",
+   "id": "4becb5ae",
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2abdf6",
+   "id": "b09897b8",
    "metadata": {},
    "source": [
     "Broadcasting has its own limitations.\\\n",
@@ -1468,8 +1468,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 165,
+   "id": "29d72ace",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([228, 291, 425, 320, 312])"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "week_1 = np.array([105,135,195,120,165])\n",
+    "week_2 = np.array([123,156,230,200,147])\n",
+    "total_earnings = week_1 + week_2  #Element wise operation\n",
+    "total_earnings  #Total Earnings for 2 weeks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "f5f7aed2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7.,  9., 13.,  8., 11.])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "week_1_hrs = week_1/15 #15 is the rate per hour\n",
+    "week_1_hrs  #1st week working hours"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ec7f7f6",
+   "metadata": {},
+   "source": [
+    "Linera Algebra - Transpose.\\\n",
+    "NumPy can carry out Linear Algebric functions as well.\\\n",
+    "The 'transpose()' function can help you interchange rows and columns, and vice-versa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "4d10d76f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[83, 71, 57, 63],\n",
+       "       [54, 68, 81, 45]])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_scores = np.array([[83,71,57,63],[54,68,81,45]])\n",
+    "test_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "c80a00e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[83, 54],\n",
+       "       [71, 68],\n",
+       "       [57, 81],\n",
+       "       [63, 45]])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_scores.transpose()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6b185a1",
+   "metadata": {},
+   "source": [
+    "Inverse and Trace functions.\\\n",
+    "*np.linalg.inv()* \\\n",
+    "Using NumPy, you can also findthe inverse of an array and add its diagonal data elements.\\\n",
+    "Inverse function can only be applied to square matrix.\\\n",
+    "*np.trace()* \\\n",
+    "Trace function helps you perform sumon the diagonal elements in the array. \\\n",
+    "trace() function is only used for diagonals.\n",
+    "Its an incremental order and applied only from left to right and not vice-versa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "31acdc05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.5,  0.4],\n",
+       "       [ 0.3, -0.2]])"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inverse_array = np.array([[10,20],[15,25]])\n",
+    "np.linalg.inv(inverse_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "45d0987a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trace_array = np.array([[10,20],[15,25]])\n",
+    "np.trace(trace_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "541cee56",
+   "id": "71739613",
    "metadata": {},
    "outputs": [],
    "source": []
